fix about spacing

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -22,20 +22,20 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 h2 {
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 h1, h3, h4 {
   margin-top: 1rem;
 }
-h1[id],
-h2[id],
-h3[id],
-h4[id],
-h5[id],
-h6[id] {
-  margin-top: -120px;
-  padding-top: 120px;
-}
+//h1[id],
+//h2[id],
+//h3[id],
+//h4[id],
+//h5[id],
+//h6[id] {
+//  margin-top: -120px;
+//  padding-top: 120px;
+//}
 .font-weight-light {
     font-weight: 200;
 }
